testsuite/tests/typecheck/should_fail/T3613.stderr
T3613.hs:14:20: error: [GHC-83865]
    • Couldn't match type ‘IO’ with ‘Maybe’
      Expected: Maybe ()
        Actual: IO ()
    • In the first argument of ‘(>>)’, namely ‘bar’
      In the first argument of ‘fooThen’, namely ‘(bar >> undefined)’
      In the expression: fooThen (bar >> undefined)

T3613.hs:17:24: error: [GHC-83865]
    • Couldn't match type ‘IO’ with ‘Maybe’
      Expected: Maybe ()
        Actual: IO ()
    • In the expression: bar
      In the first argument of ‘fooThen’, namely
        ‘(do bar
             undefined)’
      In the expression:
        fooThen
          (do bar
              undefined)

